--- a/app/src/main/res/layout/activity_all_order.xml
+++ b/app/src/main/res/layout/activity_all_order.xml
@@ -5,15 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragmentContainerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:name="androidx.navigation.fragment.NavHostFragment"
-        app:defaultNavHost="true"
-        app:navGraph="@navigation/nav"/>
-
+    tools:context=".activity.AllOrderActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
