--- a/app/src/main/res/layout/fragment_add_product.xml
+++ b/app/src/main/res/layout/fragment_add_product.xml
@@ -127,7 +127,7 @@
             <com.google.android.material.button.MaterialButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/submit_product_img"
+                android:id="@+id/submit_product_Btn"
                 android:text="Add Product"
                 android:textAllCaps="false"
                 android:layout_margin="10dp"/>
